# PathOs

./: .env.example  ARCHITECTURE.md  CRITICAL_CONDUCTISM.md  DEVELOPMENT.md  Dockerfile.backend  Dockerfile.frontend  IMPROVEMENTS.md  PLUGINS.md  README.md  THEORY.md  UX_ENHANCEMENT_COMPLETE.md  UX_IMPROVEMENTS.md  docker-compose.yml  docker_run.sh  pyproject.toml  run_demo.py  run_dev.py  run_tests.sh  setup_dev.sh  test_api.py
pathos/: api.py  cli.py
pathos/ai/: __init__.py  claude.py
pathos/api/: __init__.py
pathos/api/v1/: __init__.py  analysis.py  visualization.py
pathos/core/: __init__.py  contradiction.py  graph.py  parser.py
pathos/infrastructure/: __init__.py
pathos/infrastructure/config/: __init__.py  settings.py
pathos/infrastructure/logging/: __init__.py  logger.py
pathos/infrastructure/plugins/: __init__.py  base.py
pathos/plugins/: conductivity.py
pathos/services/: __init__.py  analysis_service.py
tests/: conftest.py  sample_contradictions.py  test_analysis_service.py  test_config.py
